# x-function

./: README.md
verifiable/: .gitignore  AGENTS.md  Cargo.toml  README.md  devenv.nix  devenv.yaml  secretspec.toml
verifiable/binaries/apps/examples/hello/: Cargo.toml  hello.rs
verifiable/binaries/cli/: Cargo.toml
verifiable/binaries/cli/src/: main.rs
verifiable/binaries/hypervisor/: Cargo.toml
verifiable/binaries/hypervisor/src/: config.rs  error.rs  lib.rs  main.rs  server.rs  types.rs
verifiable/binaries/hypervisor/src/agent/: mod.rs
verifiable/binaries/hypervisor/src/agent/a2a/: protocol.rs  server.rs
verifiable/binaries/hypervisor/src/agent/arxiv/: error.rs  mod.rs  personas.rs  tool.rs
verifiable/binaries/hypervisor/src/api/: encrypt.rs  mod.rs
verifiable/binaries/hypervisor/src/api/agent/: deploy.rs  mod.rs
verifiable/binaries/hypervisor/src/api/execute/wasm/: mod.rs
verifiable/binaries/hypervisor/src/api/policy/python/: hello.py  mod.rs
verifiable/binaries/hypervisor/src/api/search/: agent.rs  mod.rs
verifiable/binaries/hypervisor/src/utils/: commitment.rs  crypto.rs  mod.rs  x402.rs
verifiable/crates/attest/src/: lib.rs
verifiable/specs/001-wasm-hypervisor/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
verifiable/specs/001-wasm-hypervisor/checklists/: requirements.md
verifiable/specs/001-wasm-hypervisor/contracts/: openapi.yaml
verifiable/tests/: Cargo.toml
verifiable/tests/integration/: hello.wasm  x402_execute_wasm.rs
